; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/hns3pf/extr_hclge_main.c_hclge_config_tso.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/hns3pf/extr_hclge_main.c_hclge_config_tso.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hclge_dev = type { i32 }
%struct.hclge_cfg_tso_status_cmd = type { i8*, i8* }
%struct.hclge_desc = type { i64 }

@HCLGE_OPC_TSO_GENERIC_CONFIG = common dso_local global i32 0, align 4
@HCLGE_TSO_MSS_MIN_M = common dso_local global i32 0, align 4
@HCLGE_TSO_MSS_MIN_S = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hclge_dev*, i32, i32)* @hclge_config_tso to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hclge_config_tso(%struct.hclge_dev* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.hclge_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.hclge_cfg_tso_status_cmd*, align 8
  %8 = alloca %struct.hclge_desc, align 8
  %9 = alloca i64, align 8
  store %struct.hclge_dev* %0, %struct.hclge_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* @HCLGE_OPC_TSO_GENERIC_CONFIG, align 4
  %11 = call i32 @hclge_cmd_setup_basic_desc(%struct.hclge_desc* %8, i32 %10, i32 0)
  %12 = getelementptr inbounds %struct.hclge_desc, %struct.hclge_desc* %8, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = inttoptr i64 %13 to %struct.hclge_cfg_tso_status_cmd*
  store %struct.hclge_cfg_tso_status_cmd* %14, %struct.hclge_cfg_tso_status_cmd** %7, align 8
  store i64 0, i64* %9, align 8
  %15 = load i64, i64* %9, align 8
  %16 = load i32, i32* @HCLGE_TSO_MSS_MIN_M, align 4
  %17 = load i32, i32* @HCLGE_TSO_MSS_MIN_S, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @hnae3_set_field(i64 %15, i32 %16, i32 %17, i32 %18)
  %20 = load i64, i64* %9, align 8
  %21 = call i8* @cpu_to_le16(i64 %20)
  %22 = load %struct.hclge_cfg_tso_status_cmd*, %struct.hclge_cfg_tso_status_cmd** %7, align 8
  %23 = getelementptr inbounds %struct.hclge_cfg_tso_status_cmd, %struct.hclge_cfg_tso_status_cmd* %22, i32 0, i32 1
  store i8* %21, i8** %23, align 8
  store i64 0, i64* %9, align 8
  %24 = load i64, i64* %9, align 8
  %25 = load i32, i32* @HCLGE_TSO_MSS_MIN_M, align 4
  %26 = load i32, i32* @HCLGE_TSO_MSS_MIN_S, align 4
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @hnae3_set_field(i64 %24, i32 %25, i32 %26, i32 %27)
  %29 = load i64, i64* %9, align 8
  %30 = call i8* @cpu_to_le16(i64 %29)
  %31 = load %struct.hclge_cfg_tso_status_cmd*, %struct.hclge_cfg_tso_status_cmd** %7, align 8
  %32 = getelementptr inbounds %struct.hclge_cfg_tso_status_cmd, %struct.hclge_cfg_tso_status_cmd* %31, i32 0, i32 0
  store i8* %30, i8** %32, align 8
  %33 = load %struct.hclge_dev*, %struct.hclge_dev** %4, align 8
  %34 = getelementptr inbounds %struct.hclge_dev, %struct.hclge_dev* %33, i32 0, i32 0
  %35 = call i32 @hclge_cmd_send(i32* %34, %struct.hclge_desc* %8, i32 1)
  ret i32 %35
}

declare dso_local i32 @hclge_cmd_setup_basic_desc(%struct.hclge_desc*, i32, i32) #1

declare dso_local i32 @hnae3_set_field(i64, i32, i32, i32) #1

declare dso_local i8* @cpu_to_le16(i64) #1

declare dso_local i32 @hclge_cmd_send(i32*, %struct.hclge_desc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
